Added invite feature to backend

--- a/webpage/index.htm
+++ b/webpage/index.htm
@@ -4,6 +4,7 @@
 <!--<link href="favicon.png" type="image/png" rel="icon" />-->
 <title>New Chat</title>
 <link href="theme.css" type="text/css" rel="stylesheet">
+<style id="dynamic_style_sheet"></style>
 </head>
 
 <body>
