99% done with UI

--- a/webpage/index.htm
+++ b/webpage/index.htm
@@ -21,7 +21,10 @@
 		<label for="name">Name: </label><input id="name" placeholder="(random)" maxlength="22" type="text"><br />
 		<label for="room">Room: </label><input id="room" placeholder="(random)" maxlength="40" value="Lobby" type="text">
 		<br /><br />
-		<button type="submit" name="join" disabled="disabled">Join!</button>
+		<button type="submit" name="join" disabled="disabled">Connecting...</button>
+		<br /><br />
+		<button type="button" name="show_invite">Show Invite</button>
+		<button type="button" name="clear_invites">Clear All Invites</button>
 	</div>
 </form>
 
